# rust_sel4_pbf_parser

./: .gitignore  Cargo.toml  README.md  shared_types.rs  structures.bf.rs
bf/: structures.bf.pbf
bitfield-parser/src/: lib.rs
src/: lib.rs  main.rs  parser.rs
src/bf/: mod.rs  simplified.rs
