[package]
name = "rust_sel4_pbf_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
glob = "0.3.0"
proc-macro2 = "1.0.50"
quote = "1.0.23"
syn = "1.0.107"
sel4-bitfield-parser = { path = "./bitfield-parser" }
sel4-bitfield-types = { path = "./bitfield-types" }
sel4-rustfmt-helper = { path = "./sel4-rustfmt-helper" }